@@ -2,7 +2,6 @@ package spot.safety.ssbackend.leaderboard;
 
 import jakarta.persistence.*;
 import lombok.Data;
-import spot.safety.ssbackend.help.sortEntries;
 import spot.safety.ssbackend.school.SchoolClass;
 
 import java.util.Comparator;
@@ -26,12 +25,9 @@ public class Leaderboard {
         this.entries = entries;
     }
 
-    public Leaderboard() {
-    }
-
     public void refresh() {
-        Comparator comp = new sortEntries();
-        entries.sort(comp);
+        entries.sort(Comparator.comparing(LeaderboardEntry::getTotalPoints));
+
         for (int i = 0; i < entries.size(); i++) {
             entries.get(i).setRank(i + 1);
         }
@@ -39,7 +35,8 @@ public class Leaderboard {
 
     public List<LeaderboardEntry> getTopN(int n) {
         refresh();
-        int limit = Math.min(Math.max(n, 0), entries.size());
+
+        int limit = Math.clamp(n, 0, entries.size());
         return entries.subList(0, limit);
     }
 }
